<resources>
    <string name="app_name">TempConverter</string>
    <string name="action_settings">Settings</string>
    <string name="Celsius">Celsius</string>
    <string name="Degrees">Degrees</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Welcome">Welcome to the temperature converter!</string>
    <string name="Choose">Choose temperature to convert from: </string>
    <string name="input">The temperature is: </string>
    <string name="output">Converted temperature is: </string>
    <string name="Calculate">Calculate!</string>
</resources>
