<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zack.tempconverter.TempConverter">

    <TextView
        android:text="@string/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Choose"
        android:paddingTop="30dp"
        android:id="@+id/choose"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="50dp"
        android:id="@+id/groupOptions">
        <RadioButton
            android:text="@string/Celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/celsius"/>
        <RadioButton
            android:text="@string/Fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/fahrenheit"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:layout_marginTop="120dp"
        android:id="@+id/input"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/groupOptions"
        android:layout_alignRight="@+id/choose"
        android:layout_alignEnd="@+id/choose"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="37dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Degrees"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="170dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:onClick="onButtonClick"
        android:id="@+id/calculate"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:layout_marginTop="275dp"
        android:id="@+id/outputMarker"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:id="@+id/output"/>

</RelativeLayout>
